web/deployment/k8s-deployment.yml
###################################
# USERS
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  labels:
    app: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front
          image: us-central1-docker.pkg.dev/GOOGLE_PROJECT/web/app:latest
          ports:
            - containerPort: 80
          # Realizar pull siempre a la imagen
          imagePullPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: servicio-front
spec:
  type: NodePort
  selector:
    app: front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 3132
