web/deployment/k8s-ingress-deployment.yml
###################################
# INGRESS
###################################
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress-10
  labels:
    name: gateway-ingress-10
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: servicio-front
                port:
                  number: 80
